# RemotableNightshade

./: .cproject  .gitignore  .project  AUTHORS  ChangeLog  HACKING  INSTALL  INSTALL.WIN32  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  nightshade.iss  nightshade.spec  nightshade.spec.in
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in  default_config.ini  landscapes.ini  nebula_textures.fab  nightshade.1  ssystem.ini
data/scripts/: Makefile  Makefile.am  Makefile.in  annual_motion.sts  precession_and_pole_star.sts  solar_system_view.sts  startup.sts  visit_the_moon.sts  zodiac.sts
data/sky_cultures/: Makefile  Makefile.am  Makefile.in
data/sky_cultures/aztec/: Makefile  Makefile.am  Makefile.in
data/sky_cultures/chinese/: Makefile  Makefile.in
data/sky_cultures/egyptian/: Makefile  Makefile.in
data/sky_cultures/hindu/: Makefile  Makefile.am  Makefile.in  constellation_names.eng.fab  constellationsart.fab
data/sky_cultures/inca/: Makefile  Makefile.am  Makefile.in  info.ini
data/sky_cultures/inuit/: Makefile  Makefile.am  Makefile.in  constellationsart.fab
data/sky_cultures/inuit-color/: Makefile  Makefile.am  Makefile.in  constellationsart.fab  info.ini
data/sky_cultures/lakota/: Makefile  Makefile.am  Makefile.in
data/sky_cultures/navajo/: Makefile  Makefile.am  Makefile.in  constellationship.fab
data/sky_cultures/norse/: Makefile  Makefile.am  Makefile.in  info.ini  star_names.fab
data/sky_cultures/polynesian/: Makefile  Makefile.in  star_names.fab
data/sky_cultures/sami/: Makefile  Makefile.am  Makefile.in
data/sky_cultures/western/: Makefile  Makefile.am  Makefile.in
data/sky_cultures/western-color/: Makefile  Makefile.am  Makefile.in  constellationsart.fab
data/sky_cultures/western-hevelius/: Makefile  Makefile.am  Makefile.in  constellationsart.fab
data/sky_cultures/western-mod/: Makefile  Makefile.am  Makefile.in  info.ini
doc/: Makefile  Makefile.am  Makefile.in
intl/: Makefile
m4/: Makefile  Makefile.am  Makefile.in
nscontrol/: COPYING  Makefile  Makefile.am  Makefile.in  README  libnscontrol.spec
nscontrol/src/: Makefile  Makefile.am  Makefile.in  nscontrol_recovery.sh  nshade_media.cpp  nshade_media.h  nshade_shared_memory.cpp  nshade_shared_memory.h  nshade_shared_memory_connection.cpp  nshade_shared_memory_connection.h  nshade_state.cpp  nshade_state.h
nscontrol/src/.deps/: nshade_media.Plo  nshade_shared_memory.Plo  nshade_shared_memory_connection.Plo  nshade_state.Plo
po/: Makefile  Makefile.in  Makevars  af.gmo  af.po  ar.gmo  ar.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  br.gmo  br.po  ca.gmo  ca.po  cs.gmo  cs.po  cy.gmo  cy.po  da.gmo  da.po  de.gmo  de.po  dv.gmo  dv.po  el.gmo  el.po  en.gmo  en.po  en_AU.gmo  en_AU.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  (+102 more)
src/: GLee.h  Makefile  Makefile.am  Makefile.in  app.cpp  app.h  app_command_interface.cpp  app_command_interface.h  app_settings.cpp  app_settings.h  atmosphere.cpp  atmosphere.h  audio.cpp  audio.h  bump_shader.cpp  bump_shader.h  bytes.h  command_interface.cpp  command_interface.h  command_nshade.cpp  command_nshade.h  constellation.cpp  constellation.h  constellation_mgr.cpp  constellation_mgr.h  core.cpp  core.h  custom_projector.cpp  custom_projector.h  draw.cpp  draw.h  external_viewer.cpp  external_viewer.h  fader.h  fisheye_projector.cpp  fisheye_projector.h  fmath.h  geodesic_grid.cpp  geodesic_grid.h  gettext.h  (+116 more)
src/.deps/: GLee.Po  app.Po  app_command_interface.Po  app_settings.Po  atmosphere.Po  audio.Po  base64.Po  bump_shader.Po  command_interface.Po  command_nshade.Po  constellation.Po  constellation_mgr.Po  core.Po  custom_projector.Po  draw.Po  external_viewer.Po  fisheye_projector.Po  foo.Po  geodesic_grid.Po  grid.Po  hip_star.Po  hip_star_mgr.Po  hip_star_wrapper.Po  image.Po  image_mgr.Po  init_parser.Po  jsoncpp.Po  landscape.Po  loadingbar.Po  main.Po  mapping.Po  mapping_classes.Po  meteor.Po  meteor_mgr.Po  mongcpp.Po  mwebapi.Po  named_sockets.Po  navigator.Po  nebula.Po  nebula_mgr.Po  (+40 more)
src/iniparser/: Makefile  Makefile.in  dictionary.c  dictionary.h  iniparser.h
src/iniparser/.deps/: dictionary.Po  iniparser.Po  strlib.Po
src/mongoose-cpp/: jsoncpp.cpp  mongcpp.cpp  mwebapi.cpp  mwebapi.h
src/mongoose-cpp/base64/: base64.cpp  base64.h
src/mongoose-cpp/json/: json.h
src/planetsephems/: Makefile  Makefile.am  Makefile.in  elp82b.c  stellplanet.c  stellplanet.h
src/planetsephems/.deps/: calc_interpolated_elements.Po  elliptic_to_rectangular.Po  elp82b.Po  gust86.Po  l1.Po  marssat.Po  misc_stellplanet.Po  pluto.Po  sideral_time.Po  stellplanet.Po  tass17.Po  vsop87.Po
src/stellastro/: Makefile  Makefile.am  Makefile.in  misc_stellastro.c  stellastro.h
src/stellastro/.deps/: misc_stellastro.Po  nutation.Po  sidereal_time.Po
stars/: Makefile  Makefile.in
stars/default/: Makefile  Makefile.am  Makefile.in  stars.ini  stars_0_0v0_1.cat  stars_1_0v0_1.cat
textures/: Makefile  Makefile.am  Makefile.in
textures/bodies/: Makefile  Makefile.am  Makefile.in
textures/color-art/: Makefile  Makefile.am  Makefile.in  README
textures/color-art/inuit/: Makefile  Makefile.am  Makefile.in
textures/constellation-art/: Makefile  Makefile.am  Makefile.in
textures/constellation-art/hindu/: Makefile  Makefile.am  Makefile.in
textures/constellation-art/inuit/: Makefile  Makefile.am  Makefile.in
textures/landscapes/: Makefile  Makefile.am  Makefile.in
textures/nebulae/: Makefile  Makefile.am  Makefile.in
