man_MANS = nightshade.1
pkgdatadir = $(datadir)/@PACKAGE@/data
pkgdata_DATA = icon.bmp nightshade.ico landscapes.ini ssystem.ini name.fab \
	zone.tab cities.fab ngc2000.dat double_txt.dat \
	variable_txt.dat ngc2000names.dat default_config.ini nebula_textures.fab \
	fontmap.dat splash.bmp distortion.dat
EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
SUBDIRS = sky_cultures scripts
