pkgdatadir = $(datadir)/@PACKAGE@/textures

pkgdata_DATA = backmenu_flip.png backmenu.png bt_alert.png bt_atmosphere.png bt_azgrid.png bt_blank.png bt_cardinal.png bt_config.png bt_constart.png bt_constellations.png bt_const_names.png bt_eqgrid.png bt_flip_horz.png bt_flip_vert.png bt_follow.png bt_fwd.png bt_goto.png bt_ground.png bt_help.png bt_nebula.png bt_now.png bt_planet_label.png bt_question.png bt_quit.png bt_realtime.png bt_render_constellations.png bt_render_grid.png bt_render_ground.png bt_render_nebula.png bt_render_planet.png bt_render_star.png bt_rwd.png bt_search.png city.png down.png earth-shadow.png halo.png logo24bits.png logo.png milkyway.jpg neb.png planethalo.png pointeur1.png pointeur2.png pointeur4.png pointeur5.png star16x16.png starc64x64.png up.png

EXTRA_DIST = $(pkgdata_DATA)

SUBDIRS = bodies color-art constellation-art landscapes nebulae

