noinst_LIBRARIES = libstellplanet.a

libstellplanet_a_SOURCES = \
  calc_interpolated_elements.h calc_interpolated_elements.c \
  elliptic_to_rectangular.c \
  elliptic_to_rectangular.h \
  elp82b.c \
  elp82b.h \
  gust86.c \
  gust86.h \
  l1.c \
  l1.h \
  marssat.c \
  marssat.h \
  misc_stellplanet.c \
  misc_stellplanet.h \
  pluto.c \
  pluto.h \
  sideral_time.c \
  sideral_time.h \
  stellplanet.c \
  stellplanet.h \
  tass17.c \
  tass17.h \
  vsop87.c \
  vsop87.h


libstellplanet_a_LIBADD = stellplanet.o
