pkgdatadir = $(datadir)/@PACKAGE@/textures/bodies

pkgdata_DATA = amalthea.png ariel.png asteroid.png callisto.png deimos.png dione.png earth_cloud.png earth_day.jpg earth_night.jpg earth_norm_cloud.jpg earth_specular.jpg eclipse_map.png enceladus.png europa.png ganymede.png generic.png hyperion.png iapetus.png io.png jupiter.png makemake.jpg mars.png mercury.png mimas.png miranda.png moon_normal.png moon.png neptune.png nomap.png oberon.png phobos.png pluto.png proteus.png rhea.png saturn.png saturn_rings_radial.png sun.png tethys.png titania.png titan.png triton.png umbriel.png uranus.png uranusring.png venus.png

EXTRA_DIST = $(pkgdata_DATA)

