pkgdatadir = $(datadir)/@PACKAGE@/textures/landscapes

pkgdata_DATA = apollo17.png beach.png egarden.png fog.png fogridge.png guereins1.png guereins2.png guereins3.png guereins4.png guereins5.png guereins6.png guereins7.png guereins8.png guereinsb.png HR1.png HR2.png HR3.png HR4.png HR5.png HR6.png HR7.png HRb.png hurricane1.png hurricane2.png hurricane3.png hurricane4.png hurricane5.png hurricane6.png hurricane7.png hurricane8.png hurricaneb.png royal-basin.png

EXTRA_DIST = $(pkgdata_DATA)

