pkgdatadir = $(datadir)/@PACKAGE@/data/sky_cultures/western-hevelius
pkgdata_DATA = constellation_names.eng.fab constellationship.fab constellationsart.fab \
	info.ini star_names.fab boundaries.dat description.en.utf8 \
    andromeda.png     ara.png     camelopardalis.png  canis-major.png  centaurus.png  columba.png \
    cygnus.png  hercules.png  libra.png  pavo.png     pisces.png       serpens.png ursa-major.png \
	aquarius1024.png  auriga.png  cancer.png          capricornus.png  cepheus.png    corona-borealis.png \
	 draco.png   leo.png       lyra.png   pegasus.png  sagittarius.png  taurus.png               virgo.png \
	aquila.png        bootes.png  canes-venatici.png  cassiopeia.png   cetus.png      corvus.png \
	gemini.png  lepus.png     orion.png  perseus.png  scorpius.png     triangulum-australe.png

EXTRA_DIST = $(pkgdata_DATA)
